# just-act

./: CHANGELOG.md  Cargo.toml  README.md
derive/datalog-derive/: Cargo.toml
derive/datalog-derive/src/: lib.rs
derive/justact-datalog-derive/: Cargo.toml
derive/justact-datalog-derive/src/: lib.rs
justact-core/: Cargo.toml  README.md
justact-core/src/: agent.rs  agents.rs  agreements.rs  auxillary.rs  collection.rs  global.rs  interface.rs  lib.rs  local.rs  message.rs  policy.rs  set.rs  statements.rs  system.rs  times.rs  wire.rs  world.rs
justact-datalog/: Cargo.toml
justact-datalog/src/: ast.rs  interpreter.rs  lib.rs  log.rs  refhash.rs
justact-datalog/src/interpreter/: afps.rs  herbrand.rs  interpretation.rs  mod.rs
justact-demo/: Cargo.toml  README.md
justact-demo/examples/: paper1.rs
justact-demo/src/: interface.rs  lib.rs  pool.rs  set.rs  simulation.rs  statements.rs
justact-demo/src/lang/: datalog.rs  mod.rs
justact-demo/src/lang/datalog/: message.rs  set.rs
justact-demo/src/message/: datalog.rs  mod.rs
justact-policy/: Cargo.toml  README.md
justact-policy/lang/datalog/: Cargo.toml  README.md
justact-policy/lang/datalog/examples/: interpreter.rs
justact-policy/lang/datalog/src/: ast.rs  lib.rs  parser.rs
justact-policy/lang/datalog/src/interpreter/: interpretation.rs  mod.rs
justact-policy/lang/datalog/src/parser/: atoms.rs  literals.rs  mod.rs  rules.rs  tokens.rs
justact-policy/lang/datalog/tests/: friendship.datalog
justact-policy/src/: datalog.rs  lib.rs
justact-proto/: Cargo.toml
justact-proto/examples/: paper1.rs
justact-proto/examples/paper/: administrator.rs  amy.rs  anton.rs  consortium.rs  mod.rs
justact-proto/src/: agreements.rs  global.rs  interface.rs  lib.rs  local.rs  message.rs  set.rs  simulation.rs  statements.rs  sync.rs  times.rs  wire.rs
policy-langs/acting/: Cargo.toml  README.md
policy-langs/acting/src/: ast.rs  lib.rs
policy-langs/acting/src/parser/: literals.rs  mod.rs
policy-langs/acts/: Cargo.toml  README.md
policy-langs/acts/src/: lib.rs
policy-langs/datalog/: Cargo.toml  README.md
policy-langs/datalog/examples/: interpreter.rs  railroad.rs
policy-langs/datalog/src/: ast.rs  justact.rs  lib.rs  log.rs
policy-langs/datalog/src/interpreter/: interpretation.rs  mod.rs
policy-langs/datalog/src/parser/: atoms.rs  literals.rs  mod.rs  specs.rs  tokens.rs
policy-langs/datalog/tests/: friendship.datalog
