[workspace]
resolver = "2"
members = [
    # Simulation implementations
    "justact-proto",

    # Policy languages
    "policy-langs/datalog",

    # The main framework library
    "justact-core",

    # Derive libs
    "derive/datalog-derive",
]


[workspace.package]
edition = "2021"
repository = "https://github.com/Lut99/just-act"
