[package]
name = "justact-datalog"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Müller"]
repository.workspace = true
description = "A simple Datalog^\\neg interpreter to support the language as discussed in the paper."


[dependencies]
ast-toolkit-punctuated = { git = "https://github.com/Lut99/ast-toolkit-rs", branch = "snack" }
# ast-toolkit-snack = { git = "https://github.com/Lut99/ast-toolkit-rs", branch = "snack", optional = true }
ast-toolkit-span = { git = "https://github.com/Lut99/ast-toolkit-rs", branch = "snack" }
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
indexmap = "2.2"
itertools = "0.12"
log = { version = "0.4", optional = true }
paste = "1.0"

# justact-core = { path = "../justact-core" }
justact-datalog-derive = { path = "../derive/justact-datalog-derive", optional = true }


[dev-dependencies]
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }


[features]
default = []

interpreter = []
# parser = ["dep:ast-toolkit-snack"]
parser = []

derive = ["dep:justact-datalog-derive"]
log = ["dep:log"]
