[package]
name = "justact-demo"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Müller"]
repository.workspace = true
description = "Provides an implementation of a simple demo environment that simulates agents without threads or any of that fancy jazz."


[dependencies]
justact-core = { path = "../justact-core" }
justact-policy = { path = "../justact-policy" }


[features]
default = []
derive = ["datalog-derive"]

datalog = ["justact-policy/datalog"]
datalog-derive = ["justact-policy/datalog-derive"]
