[package]
name = "justact-policy"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Müller"]
repository.workspace = true
description = "Implements various policy languages such that they are compatible with the JustAct framework."


[dependencies]
datalog = { path = "lang/datalog", features = ["interpreter"], optional = true }
justact-core = { path = "../justact-core" }


[features]
default = []
derive = ["datalog-derive"]
log = ["datalog-log"]

datalog = ["dep:datalog"]
datalog-derive = ["datalog/derive"]
datalog-log = ["datalog/log"]
