[package]
name = "justact-prototype"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Müller"]
repository.workspace = true
description = "Provides an implementation of a simple demo environment that simulates agents without threads or any of that fancy jazz."


[dependencies]
bit-vec = "0.6"
console = "0.15"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
justact-core = { path = "../justact-core" }
log = "0.4"
stackvec = { git = "https://github.com/Lut99/stackvec-rs" }


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
datalog = { path = "../policy-langs/datalog", features = ["derive", "justact"] }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }


[features]
default = []
