[package]
name = "datalog-derive"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Müller"]
repository.workspace = true
description = "Implements the `datalog!{}`-macro for the `justact-datalog`-crate."


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
